# shiftedstorage

./: .gitignore  README.md  bootstrap.py  compose.yml  env.template  pyproject.toml
container-init.d/: 01-bootstrap.sh  01-ipfs-bootstrap.sh
docker/: ipfs-cluster.dockerfile  ipfs.dockerfile
src/community_cloud_storage/: cli.py  compose.yml
src/shiftedstorage/: compose.yml
test/: test_compose.py
